--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                                 </tr>
 									<tr>
 									<td>Opcion:</td>
-										<td><select name="tipoopcion"><option></option><option value="MC">Marcar Cubo</option><option value="MOC">Marcar OC</option></select></td>
+										<td><select name="tipoopcion" id="txtTipo"><option value="X"></option><option value="MC">Marcar Cubo</option><option value="MOC">Marcar OC</option></select></td>
 									</tr>
                                  <tr>       
                                     <td colspan="2"><input type="submit" value="Autentificar" id="btnautentificar"></td>
