--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
                             </div>
                        </div>-->
 </div>
+	<div data-role="page" id="OC">
+		<div data-role="main" class="ui-content">
+		</div>
+	</div>
 <div data-role="page" id="IngresoCubo">
     <!--<div data-role="header">
     </div>-->
