--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
         <link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
-<div data-role="page" id="login">
-<div data-role="header"><h2>ItaMarcarReportadoV1</h2></div> 
+<div data-role="page" id="login"> 
 	<div role="main" class="ui-content">
 		<ul data-role="listview" data-inset="true">
 			<li data-role="list-divider">
 				<center>
-					MARCAR REPORTE PT/OC V2.0
+					MARCAR REPORTADO PT/OC V2.0
 				</center>
 			</li>
 		</ul>
