--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<ul data-role="listview" data-inset="true">
 			<li data-role="list-divider">
 				<center>
-					MARCAR REPORTADO PT/OC V2.0
+					MARCAR REPORTADO PT/PO V2.0
 				</center>
 			</li>
 		</ul>
