--- a/index.html
+++ b/index.html
@@ -58,8 +58,12 @@
    </div>
 </div>
 	<div data-role="page" id="OC">
+		<div data-role="header">
+			<input type="submit" class="ui-btn-right" title="Cerrar Sesión">
+		</div>
+		<br>
 		<div role="main" class="ui-content">
-			<ul data-role="lisview" data-inset="true">
+			<ul data-role="listview" data-inset="true">
 				<li data-role="list-divider">
 					<center>
 						INICIO - FIN RECEPCION
