--- a/index.html
+++ b/index.html
@@ -59,10 +59,6 @@
 </div>
 	<div data-role="page" id="OC">
 		<div data-role="header">
-			<input type="submit" class="ui-btn-right" title="Cerrar Sesión">
-		</div>
-		<br>
-		<div role="main" class="ui-content">
 			<ul data-role="listview" data-inset="true">
 				<li data-role="list-divider">
 					<center>
@@ -70,6 +66,10 @@
 					</center>
 				</li>
 			</ul>
+		</div>
+		<br>
+		<div role="main" class="ui-content">
+			<h2 id="lblorigenOC" class="Cconsulta"></h2>
 		</div>
 	</div>
 <div data-role="page" id="IngresoCubo">
