--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
 		</div>
 		<div role="main" class="ui-content">
 			<h2 id="lblorigenOC" class="Cconsulta"></h2>
+			<div id="imagenita">
+				<img src="Imagenes/01.jpg" width="70px">
+			</div>
+			<div class="Cconsulta">
+				<center>
+					<h3>Ingrese Folio Orden de Compra a Marcar como reportada en Vigilancia:</h3>
+				</center>				
+			</div>
 		</div>
 	</div>
 <div data-role="page" id="IngresoCubo">
