--- a/index.html
+++ b/index.html
@@ -75,6 +75,15 @@
 					<h3>Ingrese Folio Orden de Compra a Marcar como reportada en Vigilancia:</h3>
 				</center>				
 			</div>
+			<div class="centrado">
+				<input type="number" class="entrada_texto" id="txtOC" placeholder="Folio de OC" value="">
+			</div>
+			<br>
+			<ul data-role="listview" data-inset="true">
+				<li>
+					<input type="submit" value="Consultar OC" id="ConsultarOC">
+				</li>
+			</ul>
 		</div>
 	</div>
 <div data-role="page" id="IngresoCubo">
