--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			</div>
 			<br>
 			<ul data-role="listview" data-inset="true">
-				<li>
+				<li class="centrado">
 					<input type="submit" value="Consultar OC" id="ConsultarOC">
 				</li>
 			</ul>
