--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
 			</div>
 			<div class="Cconsulta">
 				<center>
-					<h3>Ingrese Folio Orden de Compra a Marcar como reportada en Vigilancia:</h3>
+					<h3>Ingrese Division y Folio Orden de Compra a Marcar como reportada en Vigilancia:</h3>
 				</center>				
 			</div>
 			<div class="centrado">
-				<input type="number" class="entrada_texto" id="txtOC" placeholder="Folio de OC" value="">
+				<input type="number" class="entrada_texto" id="txtOC" placeholder="Division y OC" value="">
 			</div>
 			<br>
 			<ul data-role="listview" data-inset="true">
-				<li class="centrado">
+				<li>
 					<input type="submit" value="Consultar OC" id="ConsultarOC">
 				</li>
 			</ul>
