--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
 			</div>
 			<br>
 			<ul data-role="listview" data-inset="true">
-				<li>
+				<li class="centrado">					
 					<input type="submit" value="Consultar OC" id="ConsultarOC">
+					<input type="submit" value="Cerrar Sesión" id="CerrarSesion">
 				</li>
 			</ul>
 		</div>
