--- a/index.html
+++ b/index.html
@@ -84,9 +84,16 @@
 					<input type="submit" value="Consultar OC" id="ConsultarOC">					
 				</li>
 				<li>
-					<input type="submit" value="Cerrar Sesión" id="CerrarSesion">
+					<input type="submit" value="Cerrar Sesión" id="CSOC">
 				</li>
 			</ul>
+		</div>
+		<div data-role="footer" data-position="fixed">
+			<center>
+				<span style="font-size:8pt;">
+					Copyright &copy; 2017 Grupo Industrial La Italiana
+				</span>
+			</center>
 		</div>
 	</div>
 <div data-role="page" id="IngresoCubo">
