--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<input type="password" class="entrada_texto" id="txtcontrasena" placeholder="Contraseña" value="">
 		</li>
 		<li>
-			<select id="txtTipo">
+			<select id="txtTipo" data-role="slider">
 				<option value="">Tipo</option>
 				<option value="MC">Marcar Cubo</option>
 				<option value="MOC">Marcar Orden Compra</option>
