--- a/index.html
+++ b/index.html
@@ -264,6 +264,11 @@
         <script src="js/jquery-1.12.2.min.js"></script>
         <script src="js/jquery.mobile-1.4.5.min.js"></script>
         <script src="js/actions.js"></script>
+	<script type="text/javascript">
+		$(document).ready(function(){
+			$('#txtTipo option:first');
+		});
+	</script>
     <script src="js/datos.js"></script>
     <script src="js/almacenamiento.js"></script>
     <!--<script src="js/servidor.js"></script>-->
