--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
 			</center>
 		</div>
 	</div>
+	<div data-role="page" id="Info">
+		<br>
+		<div role="main" class="ui-content">
+			<ul data-role="listview" data-inset="true" id="dat">
+				<br>
+			</ul>
+		</div>
+	</div>
 <div data-role="page" id="IngresoCubo">
     <!--<div data-role="header">
     </div>-->
