--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		<div data-role="header">					
 			<center>
 				<br>
-				INICIO - FIN RECEPCION	
+				MARCAR REPORTADO PO
 			</center>
 			<br>
 		</div>
