--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="#" class="parpadea ui-btn ui-icon-alert ui-btn-icon-top" id="ReportarMarca">
+						<a href="#" class="parpadea ui-btn ui-icon-alert ui-btn-icon-top" id="MarcaOC">
 							Marcar como reportado<br>en vigilancia
 						</a>
 					</li>
